--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ header{
 
 canvas{
     border: 3px solid rgb(255, 111, 0);
-    width: 100%;
-    height: 50vh;
+    width: 400px;
+    height: 400px;
 }
 
 button{
